Fix audio source text wrapping

--- a/sources/assets/web/css/pipewire-capturer.css
+++ b/sources/assets/web/css/pipewire-capturer.css
@@ -93,6 +93,7 @@ body {
 
 .capturer-audio-button {
 	cursor: pointer;
+	display: flex;
 	flex-direction: column;
 	align-items: stretch;
 	width: 15vw; /* 10vw later */
